--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-identity:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.android.support:support-v4:24.0.0-alpha1'
+    compile project(':common')
 }
