--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="pt.unl.fct.di.novalincs.yanux.scavenger">
+    package="pt.unl.fct.di.novalincs.yanux.scavenger.common">
 
     <application
         android:allowBackup="true"
