--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 'Google Inc.:Google APIs:23'
+    buildToolsVersion "23.0.3"
     defaultConfig {
-        applicationId "pt.unl.fct.di.novalincs.yanuxscavenger"
+        applicationId "pt.unl.fct.di.novalincs.yanux.scavenger.common.scavenger.wear"
         minSdkVersion 23
         targetSdkVersion 23
         versionCode 1
