--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -14,9 +14,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pt.unl.fct.di.novalincs.yanux.scavenger.common">
 
+    <uses-sdk
+        android:minSdkVersion="18"
+        android:targetSdkVersion="23" />
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"></application>
+        android:supportsRtl="true" />
 
 </manifest>
