--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pt.unl.fct.di.novalincs.yanux.scavenger">
-    <uses-sdk android:minSdkVersion="23" android:maxSdkVersion="23" android:targetSdkVersion="23" />
+
+    <uses-sdk
+        android:minSdkVersion="23"
+        android:targetSdkVersion="23" />
+
     <uses-feature android:name="android.hardware.type.watch" />
     <application
         android:allowBackup="true"
