- Wear App now supports Round and Square screens with the same shared layout - More refactoring.

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -17,7 +17,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "pt.unl.fct.di.novalincs.yanux.scavenger.common.scavenger"
+        applicationId "pt.unl.fct.di.novalincs.yanux.scavenger"
         minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
