--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -17,7 +17,7 @@ android {
     compileSdkVersion 'Google Inc.:Google APIs:23'
     buildToolsVersion "23.0.3"
     defaultConfig {
-        applicationId "pt.unl.fct.di.novalincs.yanux.scavenger.common.scavenger.wear"
+        applicationId "pt.unl.fct.di.novalincs.yanux.scavenger.wear"
         minSdkVersion 23
         targetSdkVersion 23
         versionCode 1
@@ -37,4 +37,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.support:wearable:1.3.0'
     compile 'com.google.android.gms:play-services-wearable:8.4.0'
+    compile project(':common')
 }
