--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2016 Pedro Albuquerque Santos
   ~
   ~ This file is part of YanuX Scavenger.
@@ -10,7 +9,6 @@
   ~
   ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger.  If not, see <https://www.gnu.org/licenses/gpl.html>
   -->
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pt.unl.fct.di.novalincs.yanux.scavenger">
 
@@ -53,8 +51,17 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pt.unl.fct.di.novalincs.yanux.scavenger.MainActivity" />
         </activity>
-        <activity android:name=".SensorsActivity"
+        <activity
+            android:name=".SensorsActivity"
             android:label="@string/title_activity_sensors"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pt.unl.fct.di.novalincs.yanux.scavenger.MainActivity" />
+        </activity>
+        <activity
+            android:name=".WifiActivity"
+            android:label="@string/title_activity_wifi"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
