--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -36,10 +36,10 @@ dependencies {
     wearApp project(':wear')
     testCompile 'junit:junit:4.12'
     compile project(':common')
-    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.android.support:design:24.0.0-alpha1'
     compile 'com.google.android.gms:play-services-identity:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
-    compile 'com.android.support:support-v4:24.0.0-alpha1'
 }
