--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2016 Pedro Albuquerque Santos
+  ~ Copyright (c) 2016 Pedro Albuquerque Santos.
   ~
   ~ This file is part of YanuX Scavenger.
   ~
