--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
   ~
   ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger.  If not, see <https://www.gnu.org/licenses/gpl.html>
   -->
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pt.unl.fct.di.novalincs.yanux.scavenger">
 
@@ -18,6 +17,10 @@
         android:targetSdkVersion="23" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -63,6 +66,15 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="pt.unl.fct.di.novalincs.yanux.scavenger.MainActivity" />
+        </activity>
+        <activity
+            android:name=".BluetoothClassicActivity"
+            android:label="@string/title_activity_bluetooth_classic"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pt.unl.fct.di.novalincs.yanux.scavenger.MainActivity" />
+
         </activity>
     </application>
 
