--- a/common/build.gradle
+++ b/common/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'org.altbeacon:android-beacon-library:2.7'
 }
