--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,8 +13,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 'Google Inc.:Google APIs:23'
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 23
+    buildToolsVersion '24.0.0 rc2'
 
     defaultConfig {
         minSdkVersion 18
@@ -33,6 +33,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'org.altbeacon:android-beacon-library:2.7'
 }
