--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -13,8 +13,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'Google Inc.:Google APIs:23'
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 23
+    buildToolsVersion "24.0.0 rc2"
 
     defaultConfig {
         applicationId "pt.unl.fct.di.novalincs.yanux.scavenger"
@@ -36,10 +36,8 @@ dependencies {
     wearApp project(':wear')
     testCompile 'junit:junit:4.12'
     compile project(':common')
-    compile 'com.android.support:support-v4:24.0.0-alpha1'
-    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
-    compile 'com.android.support:design:24.0.0-alpha1'
+    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.google.android.gms:play-services-identity:8.4.0'
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
 }
