- Multidex Supported Enabled

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -18,11 +18,27 @@ android {
 
     defaultConfig {
         applicationId "pt.unl.fct.di.novalincs.yanux.scavenger"
-        minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
+
+    productFlavors {
+        // Define separate dev and prod product flavors.
+        dev {
+            // dev utilizes minSDKVersion = 21 to allow the Android gradle plugin
+            // to pre-dex each module and produce an APK that can be tested on
+            // Android Lollipop without time consuming dex merging processes.
+            minSdkVersion 21
+        }
+        prod {
+            // The actual minSdkVersion for the application.
+            minSdkVersion 18
+            // Enabling multidex support.
+            multiDexEnabled true
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -35,6 +51,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     wearApp project(':wear')
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:multidex:1.0.0'
     compile project(':common')
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:appcompat-v7:23.3.0'
