--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -30,7 +30,7 @@ android {
         }
     }
     compileSdkVersion 25
-    buildToolsVersion '25'
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId 'pt.unl.fct.di.novalincs.yanux.scavenger'
         minSdkVersion 23
@@ -41,24 +41,18 @@ android {
         // Enabling multidex support.
         multiDexEnabled true
     }
-    productFlavors {
-        /*// Define separate dev and prod product flavors.
-        dev {
-            // dev utilizes minSDKVersion = 21 to allow the Android gradle plugin
-            // to pre-dex each module and produce an APK that can be tested on
-            // Android Lollipop without time consuming dex merging processes.
-            minSdkVersion 21
-        }
-        prod {
-            // The actual minSdkVersion for the application.
-            minSdkVersion 18
-        }*/
-    }
     buildTypes {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
     }
 }
 
@@ -66,10 +60,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     wearApp project(':wear')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:multidex:1.0.0'
     compile project(':common')
-    compile 'com.android.support:support-v4:24.2.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.google.android.gms:play-services-analytics:10.2.6'
 }
