--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -13,12 +13,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25'
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         applicationId "pt.unl.fct.di.novalincs.yanux.scavenger"
-        minSdkVersion 23
-        targetSdkVersion 23
+        minSdkVersion 25
+        targetSdkVersion 25
         versionCode 1
         versionName '1.0'
     }
@@ -34,7 +34,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.google.android.support:wearable:1.4.0'
-    compile 'com.google.android.gms:play-services-wearable:9.4.0'
+    provided 'com.google.android.wearable:wearable:2.0.2'
+    compile 'com.google.android.support:wearable:2.0.2'
+    compile 'com.google.android.gms:play-services-wearable:10.2.6'
     compile project(':common')
 }
