--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2016 Pedro Albuquerque Santos.
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (c) 2017 Pedro Albuquerque Santos.
   ~
   ~ This file is part of YanuX Scavenger.
   ~ YanuX Scavenger is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
