--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleCompatible
 /*
  * Copyright (c) 2017 Pedro Albuquerque Santos.
  *
@@ -12,13 +13,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.0'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         applicationId "pt.unl.fct.di.novalincs.yanux.scavenger"
         minSdkVersion 25
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName '1.0'
     }
@@ -41,8 +42,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    provided 'com.google.android.wearable:wearable:2.0.2'
-    compile 'com.google.android.support:wearable:2.0.2'
-    compile 'com.google.android.gms:play-services-wearable:10.2.6'
     compile project(':common')
+    provided 'com.google.android.wearable:wearable:2.0.4'
+    compile 'com.google.android.support:wearable:2.0.4'
+    compile 'com.google.android.gms:play-services-wearable:11.2.0'
 }
