- Besides some minor bugfixing, the big highlight of this commit is the testing of the Google Nearby Messages API and the like. All the code is concetrated in the pt.unl.fct.di.novalincs.yanux.scavenger.activity.nearby package. Everything is tested directly in Android's Logcat and I have yet to generalize my code so that I can put it in the common module in order to be used by multiple types of Android devices besides smartphones and tablets. I don't even know if it is worth the hassle in this case because I don't think that the Google Nearby Messages API is supported anywhere else.

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -7,13 +7,13 @@
   ~ YanuX Scavenger is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
   ~
   ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger.  If not, see <https://www.gnu.org/licenses/gpl.html>
-  -->
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pt.unl.fct.di.novalincs.yanux.scavenger">
 
-    <uses-sdk
-        android:minSdkVersion="23"
-        android:targetSdkVersion="27" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -30,6 +30,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.nearby.messages.API_KEY"
+            android:value="AIzaSyBZllcr3ShHH_lVMv2F6I3PgRyjtyxiqdQ" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -86,6 +90,14 @@
         <activity
             android:name=".activity.audio.AudioActivity"
             android:label="@string/title_activity_audio"
+            android:parentActivityName=".activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.MainActivity" />
+        </activity>
+        <activity
+            android:name=".activity.nearby.NearbyActivity"
+            android:label="@string/title_activity_nearby"
             android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
