- Working on the Persistent Service * A few more details... such as getting the code from the authorization flow

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -128,7 +128,7 @@
                 android:value=".activity.MainActivity" />
         </activity>
 
-        <service android:name=".service.MobileService" />
+        <service android:name=".service.MobilePersistentService" />
 
         <receiver android:name=".service.ServiceManagerBootBroadcastReceiver">
             <intent-filter>
