--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -32,6 +32,10 @@ android {
     }
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
 
     defaultConfig {
         applicationId 'pt.unl.fct.di.novalincs.yanux.scavenger'
@@ -64,12 +68,12 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     wearApp project(':wear')
     implementation project(':common')
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.preference:preference:1.1.0-alpha01'
+    implementation 'androidx.preference:preference:1.1.0-alpha03'
     implementation 'com.google.android.gms:play-services-nearby:16.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha01'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
