--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -15,6 +15,10 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
 
     defaultConfig {
         applicationId "pt.unl.fct.di.novalincs.yanux.scavenger"
