--- a/common/build.gradle
+++ b/common/build.gradle
@@ -43,8 +43,10 @@ dependencies {
     api 'com.fasterxml.jackson.core:jackson-core:2.9.8'
     api 'com.fasterxml.jackson.core:jackson-annotations:2.9.8'
     api 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+    api 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.9.8'
+
     api 'com.squareup.okhttp3:okhttp:3.13.1'
-    api ('io.socket:socket.io-client:1.0.0') {
+    api('io.socket:socket.io-client:1.0.0') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
