--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (c) 2019 Pedro Albuquerque Santos.
   ~
   ~ This file is part of YanuX Scavenger.
@@ -9,6 +10,7 @@
   ~
   ~ You should have received a copy of the GNU General Public License along with YanuX Scavenger. If not, see <https://www.gnu.org/licenses/gpl.html>
   -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pt.unl.fct.di.novalincs.yanux.scavenger">
 
@@ -18,13 +20,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".services.MobilePersistentServiceDisableDialogActivity"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter android:label="@string/app_name">
@@ -43,7 +46,6 @@
         <meta-data
             android:name="com.google.android.nearby.messages.API_KEY"
             android:value="AIzaSyBZllcr3ShHH_lVMv2F6I3PgRyjtyxiqdQ" />
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -56,7 +58,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.beacons.BeaconsActivity"
             android:label="@string/title_activity_beacons"
@@ -65,7 +66,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.bluetooth.BluetoothClassicActivity"
             android:label="@string/title_activity_bluetooth_classic"
@@ -74,7 +74,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.bluetooth.BluetoothLeActivity"
             android:label="@string/title_activity_bluetooth_le"
@@ -83,7 +82,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.nearby.NearbyConnectionsActivity"
             android:label="@string/title_activity_nearby_messages"
@@ -92,7 +90,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.nearby.NearbyMessagesActivity"
             android:label="@string/title_activity_nearby_messages"
@@ -101,7 +98,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.sensors.SensorsActivity"
             android:label="@string/title_activity_sensors"
@@ -110,7 +106,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.wifi.WifiActivity"
             android:label="@string/title_activity_wifi"
@@ -119,7 +114,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.preferences.PreferencesActivity"
             android:label="@string/title_activity_preferences"
@@ -129,13 +123,14 @@
                 android:value=".activity.MainActivity" />
         </activity>
 
-        <service android:name=".service.MobilePersistentService" />
+        <service android:name=".services.MobilePersistentService" />
 
-        <receiver android:name=".service.MobilePersistentServiceBroadcastReceiver">
+        <receiver android:name=".services.MobilePersistentServiceBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="pt.unl.fct.di.novalincs.yanux.scavenger.NOTIFICATION_CHANNEL.ACTION_DISABLE_SERVICE" />
             </intent-filter>
         </receiver>
     </application>
+
 </manifest>
