- I finally moved from Spongy Castle to Bouncy Castle. However, I had to do some trickery with the junit dependency in order for it to compile correctly. Moreover, I still need to test if I can really use Bouncy Castle in place of Spongy Castle interchangeably. I also changed the EncryptionToolbox class a little a bit so that it initializes everything it can once it is loaded and only the rest gets put into the "getPublicKey" methods (its only method so far).

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -34,12 +34,6 @@ android {
     }
 }
 
-//TODO: Test if everything works with Bouncy Castle in place of Spongy Castle
-//This is needed for the project to compile with Bouncy Castle
-/*configurations {
-    all*.exclude group: 'junit', module: 'junit'
-}*/
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api 'androidx.appcompat:appcompat:1.1.0'
@@ -50,9 +44,13 @@ dependencies {
     api 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
     api 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.10.1'
     api 'com.googlecode.json-simple:json-simple:1.1.1'
-    api 'com.madgag.spongycastle:bcpkix-jdk15on:1.58.0.0'
-    //TODO: Test if everything works with Bouncy Castle in place of Spongy Castle
-    //api 'org.bouncycastle:bcpkix-jdk15on:1.64'
+    api 'org.bouncycastle:bcpkix-jdk15on:1.64'
+    //This is needed for the project to compile with Bouncy Castle instead of with Spongy Castle
+    implementation('junit:junit') {
+        version {
+            strictly '4.12'
+        }
+    }
     api 'com.squareup.okhttp3:okhttp:4.2.2'
     api 'org.nanohttpd:nanohttpd-webserver:2.3.1'
     api('io.socket:socket.io-client:1.0.0') {
@@ -63,5 +61,5 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.7'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.7'
     api 'org.altbeacon:android-beacon-library:2.16.3'
-    testImplementation 'junit:junit:4.12'
+    testImplementation('junit:junit:4.12')
 }
